// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QueryBuilderBooleanSearch transformBooleanSearchToDSL function Edge cases If no field value is provided, nothing should be generated. 1`] = `{}`;

exports[`QueryBuilderBooleanSearch transformBooleanSearchToDSL function Empty operation Normal field 1`] = `
{
  "bool": {
    "must_not": {
      "exists": {
        "field": "data.attributes.booleanField",
      },
    },
  },
}
`;

exports[`QueryBuilderBooleanSearch transformBooleanSearchToDSL function Empty operation With relationship as field 1`] = `
{
  "bool": {
    "should": [
      {
        "bool": {
          "must_not": {
            "nested": {
              "path": "included",
              "query": {
                "bool": {
                  "must": [
                    {
                      "exists": {
                        "field": "includes.name",
                      },
                    },
                    {
                      "term": {
                        "included.type": "collection",
                      },
                    },
                  ],
                },
              },
            },
          },
        },
      },
      {
        "bool": {
          "must_not": {
            "exists": {
              "field": "data.relationships.collection.data.id",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderBooleanSearch transformBooleanSearchToDSL function Equals operation Normal field 1`] = `
{
  "term": {
    "data.attributes.booleanField": "true",
  },
}
`;

exports[`QueryBuilderBooleanSearch transformBooleanSearchToDSL function Equals operation With relationship as field 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "term": {
              "includes.name": "false",
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderBooleanSearch transformBooleanSearchToDSL function Not empty operation Normal field 1`] = `
{
  "exists": {
    "field": "data.attributes.booleanField",
  },
}
`;

exports[`QueryBuilderBooleanSearch transformBooleanSearchToDSL function Not empty operation With relationship as field 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "exists": {
              "field": "includes.name",
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;
